Feature: Added UserBundle and enforce security on bundle endpoints

--- a/symfony/public/swagger.html
+++ b/symfony/public/swagger.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Siroko Ecommerce - API Docs</title>
+    <title>Siroko Cart - API Docs</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist/swagger-ui.css" />
 </head>
 <body>
